--- a/products/templates/products/artist_detail.html
+++ b/products/templates/products/artist_detail.html
@@ -73,7 +73,7 @@
                             <div class="card-footer bg-white pt-0 border-0 text-left">
                                 <div class="row">
                                     <div class="col">
-                                        <p class="lead mb-0 text-left font-weight-bold">${{ album.price }}</p>
+                                        <p class="lead mb-0 text-left font-weight-bold">€{{ album.price }}</p>
                                         {% if album.rating %}
                                             <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ album.rating }} / 5</small>
                                         {% else %}
