--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,6 @@
                         <img class="float-left" src="{{ MEDIA_URL }}logo.png" alt="Vinyl Logo">
                         <p class=" text-black my-auto logo-text float-left">Vinyl</p>
                     </a>
-                    
                 </div>
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <form method="GET" action="{% url 'albums' %}">
@@ -86,11 +85,18 @@
                             </a>
                             <div class="dropdown-menu border-0" aria-labelledby="user-options">
                                 {% if request.user.is_authenticated %}
-                                {% if request.user.is_superuser %}
-                                    <a href="" class="dropdown-item">Product Management</a>
-                                {% endif %}
-                                    <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                    {% if request.user.is_superuser %}
+                                        <div class="pl-2 pr-2">
+                                            <p class="mb-0">Product Management</p>
+                                            <a href="{% url 'add_album' %}" class="dropdown-item">Add Album</a>
+                                            <a href="{% url 'add_artist' %}" class="dropdown-item">Add Artist</a>
+                                        </div>
+                                    {% endif %}
+                                    <div class="pl-2 pr-2 mt-2">
+                                        <p class="mb-0">Your Account</p>
+                                        <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                    </div>
                                 {% else %}
                                     <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
                                     <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
@@ -104,9 +110,9 @@
                                     <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                     <p class="my-0">
                                         {% if grand_total %}
-                                            ${{ grand_total|floatformat:2 }}
+                                            €{{ grand_total|floatformat:2 }}
                                         {% else %}
-                                            $0.00
+                                            €0.00
                                         {% endif %}
                                     </p>
                                 </div>
