--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,6 +1,10 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
 
+        <li class="">
+            <a href="{% url 'home' %}" class="nav-link font-weight-bold mr-5">Home</a>
+        </li>
+
         <li class="nav-item dropdown">
             <a class="font-weight-bold nav-link mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Albums
