--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -35,10 +35,18 @@
         <div class="dropdown-menu border-0" aria-labelledby="user-options">
             {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser %}
-                    <a href="{% url 'account_logout' %}" class="dropdown-item">Product Management</a>
+                    <div class="pl-2 pr-2">
+                        <p class="mb-0">Product Management</p>
+                        <a href="{% url 'add_album' %}" class="dropdown-item">Add Album</a>
+                        <a href="{% url 'add_artist' %}" class="dropdown-item">Add Artist</a>
+                    </div>
+                    
                 {% endif %}
-                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                <div class="pl-2 pr-2 mt-2">
+                    <p class="mb-0">Your Account</p>
+                    <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                </div>
             {% else %}
                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
                 <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
@@ -52,9 +60,9 @@
                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                 <p class="my-0">
                     {% if grand_total %}
-                        ${{ grand_total|floatformat:2 }}
+                        €{{ grand_total|floatformat:2 }}
                     {% else %}
-                        $0.00
+                        €0.00
                     {% endif %}
                 </p>
             </div>
