--- a/products/templates/products/artists.html
+++ b/products/templates/products/artists.html
@@ -20,8 +20,31 @@
         </div>
         <div class="row">
             <div class="product-container col-10 offset-1">
-                <div class="row mt-1 mb-2"></div>
-                <div class="row">
+                <div class="row mt-1 mb-2">
+                    <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                        <div class="sort-select-wrapper w-50">
+                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                                <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                                <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
+                                <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
+                                <option value="featured_asc" {% if current_sorting == 'featured_asc' %}selected{% endif %}>Featured Artists (A-Z)</option>
+                                <option value="featured_desc" {% if current_sorting == 'featured_desc' %}selected{% endif %}>Featured Artists (Z-A)</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 order-md-first">
+                        <p class="text-muted mt-3 text-center text-md-left">
+                            {% if current_sorting != 'None_None' %}
+                                <span class="small"><a href="{% url 'artists' %}">Artists Home</a> | </span>
+                            {% endif %}
+                            {{ artists|length }} Artists
+                        </p>
+                    </div>
+                </div>
+                {% if current_sorting == 'featured_asc' or current_sorting == 'featured_desc' %}
+                    <p>These are our featured artists for the month, you can go back to all artists here.</p>
+                {% endif %}
+                <div class="row justify-content-center align-items-center">
                     {% for artist in artists %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
@@ -37,12 +60,14 @@
                                 <div class="card-body pb-0">
                                     <p class="mb-0">{{ artist.name }}</p>
                                 </div>
-                                {% if request.user.is_superuser %}
-                                    <small>
-                                        <a href="{% url 'edit_artist' artist.id %}">Edit</a> | 
-                                        <a class="text-danger" href="{% url 'delete_artist' artist.id %}">Delete</a>
-                                    </small>
-                                {% endif %}
+                                <div class="card-footer pt-0 border-0 text-left">
+                                    {% if request.user.is_superuser %}
+                                        <small>
+                                            <a href="{% url 'edit_artist' artist.id %}">Edit</a> | 
+                                            <a class="text-danger" href="{% url 'delete_artist' artist.id %}">Delete</a>
+                                        </small>
+                                    {% endif %}
+                                </div>
                             </div>
                         </div>
                         {% if forloop.counter|divisibleby:1 %}
@@ -70,4 +95,41 @@
             </div>
         </div>
     </div>
+    <div class="btt-button shadow-sm">
+        <a class="btt-link d-flex h-100">
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+        </a>	
+    </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
+    
+    <script type="text/javascript">
+        $('#sort-selector').change(function() {
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
+
+            var selectedVal = selector.val();
+            if(selectedVal != "reset"){
+                var sort = selectedVal.split("_")[0];
+                var direction = selectedVal.split("_")[1];
+
+                currentUrl.searchParams.set("sort", sort);
+                currentUrl.searchParams.set("direction", direction);
+
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("sort");
+                currentUrl.searchParams.delete("direction");
+
+                window.location.replace(currentUrl);
+            }
+        })
+    </script>
 {% endblock %}
